log
Thu 20 Apr 2023 04:52:22 PM UTC: 
 tests:  1|8
total_score: 0/70
8d8e309
Thu 20 Apr 2023 05:07:58 PM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  8|7
total_score: 10/70
1c43e65
Thu 20 Apr 2023 05:18:03 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
5e307cc
Thu 20 Apr 2023 05:33:16 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
 tests:  11|6
total_score: 15/70
2754b38
Thu 20 Apr 2023 05:37:04 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
00b9862
Fri 21 Apr 2023 07:20:05 PM UTC: 
 treemap.c | 38 +++++++++++++++++---------------------
 1 file changed, 17 insertions(+), 21 deletions(-)
 tests:  13|5
total_score: 25/70
dc3de6a
Fri 21 Apr 2023 07:35:12 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
81a74fa
Sat 22 Apr 2023 05:33:45 AM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
  105 |     treeNode * parent = node->parent;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:105:25: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
  105 |     treeNode * parent = node->parent;
      |                         ^~~~
treemap.c:106:14: error: request for member ‘left’ in something not a structure or union
  106 |     if(parent->left == node)
      |              ^~
treemap.c:108:13: error: request for member ‘left’ in something not a structure or union
  108 |       parent->left = NULL;
      |             ^~
treemap.c:111:13: error: request for member ‘right’ in something not a structure or union
  111 |       parent->right = NULL;
      |             ^~
cc1: all warnings being treated as errors
Compilation failed
85ceb1d
Sat 22 Apr 2023 05:34:36 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
20a6f8a
Sat 22 Apr 2023 05:34:56 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
a44794f
Sat 22 Apr 2023 05:52:11 AM UTC: 
 treemap.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:119:16: error: unused variable ‘hijo’ [-Werror=unused-variable]
  119 |     TreeNode * hijo = node->left;
      |                ^~~~
treemap.c:122:16: error: unused variable ‘hijo’ [-Werror=unused-variable]
  122 |     TreeNode * hijo = node->right;
      |                ^~~~
treemap.c:131:24: error: ‘hijo’ undeclared (first use in this function)
  131 |         parent->left = hijo;
      |                        ^~~~
treemap.c:131:24: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
b907b0d
Sat 22 Apr 2023 05:53:52 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:119:3: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘if’
  119 |   if(node->left != NULL)
      |   ^~
treemap.c:121:5: error: ‘hijo’ undeclared (first use in this function)
  121 |     hijo = node->left;
      |     ^~~~
treemap.c:121:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1b99deb
Sat 22 Apr 2023 05:53:59 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:143:20: error: statement with no effect [-Werror=unused-value]
  143 |       hijo->parent == NULL;
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
a63b827
Sat 22 Apr 2023 05:54:19 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b1a31f
Sat 22 Apr 2023 05:55:48 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:129:8: error: ‘parent’ undeclared (first use in this function)
  129 |     if(parent != NULL)
      |        ^~~~~~
treemap.c:129:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a5f5392
Sat 22 Apr 2023 05:56:48 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
99aef10
Sat 22 Apr 2023 05:58:51 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
d5f4e5d
Sat 22 Apr 2023 06:18:54 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
d8d30e7
Sat 22 Apr 2023 06:43:37 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:118:14: error: variable ‘hijo’ set but not used [-Werror=unused-but-set-variable]
  118 |   TreeNode * hijo;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
942b88d
Sat 22 Apr 2023 06:43:50 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:120:5: error: ‘hijo’ undeclared (first use in this function)
  120 |     hijo = node->left;
      |     ^~~~
treemap.c:120:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
48cf218
Sat 22 Apr 2023 06:44:26 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:118:14: error: unused variable ‘hijo’ [-Werror=unused-variable]
  118 |   TreeNode * hijo;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
c9f5117
Sat 22 Apr 2023 06:45:30 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
2b9baa9
Sat 22 Apr 2023 06:46:32 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a1f439d
Sat 22 Apr 2023 06:47:30 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:158:3: error: expected expression before ‘}’ token
  158 |   }
      |   ^
treemap.c:158:3: error: ‘return’ with a value, in function returning void [-Werror=return-type]
treemap.c:102:6: note: declared here
  102 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3d4a78b
